--- a/kustom-webapp/overlays/dev/kustomization.yaml
+++ b/kustom-webapp/overlays/dev/kustomization.yaml
@@ -1,9 +1,12 @@
-bases:
-- ../../base
 
-patches:
- - replicas.yaml
+patchesStrategicMerge:
+- replicas.yaml
 
 configMapGenerator:
-- name: mykustom-map
-  env: config.properties
+- envs:
+  - config.properties
+  name: mykustom-map
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+resources:
+- ../../base
