--- a/helm-webapp/values-dev.yaml
+++ b/helm-webapp/values-dev.yaml
@@ -3,4 +3,4 @@ replicas: 4
 
 configmap:
   data:
-    CUSTOM_HEADER: 'This is on the Monthe environment!'
+    CUSTOM_HEADER: 'This is on the cameron environment!'
