--- a/helm-webapp/values-dev.yaml
+++ b/helm-webapp/values-dev.yaml
@@ -1,6 +1,6 @@
 
-replicas: 5
+replicas: 2
 
 configmap:
   data:
-    CUSTOM_HEADER: 'This is on the DEV environment!'
+    CUSTOM_HEADER: 'Continue Delivery of application in the DEV environment!'
