--- a/helm-webapp/values-dev.yaml
+++ b/helm-webapp/values-dev.yaml
@@ -1,6 +1,6 @@
 
-replicas: 2
+replicas: 3
 
 configmap:
   data:
-    CUSTOM_HEADER: 'Continue Delivery of application in the DEV environment!'
+    CUSTOM_HEADER: 'Continue Delivery in the DEV environment!'
