--- a/helm-webapp/values.yaml
+++ b/helm-webapp/values.yaml
@@ -8,5 +8,5 @@ configmap:
     CUSTOM_HEADER: 'This app was deployed with helm!'
 
 image:
-  name: ochan110/getting-started
+  name: gcr.io/heptio-images/ks-guestbook-demo
   tag: latest
